# reichlab-python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pythonapp-workflow.yml
requirements/: requirements-dev.txt  requirements.txt
src/reichlab_python_template/: __init__.py  app.py
src/reichlab_python_template/conf/: config.py  config.toml
src/reichlab_python_template/util/: date.py  logs.py
tests/reichlab_python_template/: test_app.py
tests/reichlab_python_template/unit/util/: test_date.py
